[tool.poetry]
name = "photomosaic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "3.8.0"
ipython = {version = "^8.0.0", extras = ["notebook"]}
matplotlib = "^3.8.3"
moviepy = "1.0.3"
dlib = "^19.24.2"
imutils = "0.5.3"
numpy = "^1.26.4"
scikit-image = "^0.19.3"
cython = "^3.0.9"
ipdb = "^0.13.13"
scikit-learn = "^1.4.1.post1"
opencv-python = "^4.9.0.80"
imageio = "^2.34.0"
imageio-ffmpeg = "^0.4.9"
bs4 = "^0.0.2"
boto3 = "^1.34.73"
requests = "^2.31.0"
faiss-cpu = "^1.8.0"
pillow-heif = "^0.16.0"
filprofiler = "^2023.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
